files are updated

--- a/Data PreProcessing_Model/Visualization.ipynb
+++ b/Data PreProcessing_Model/Visualization.ipynb
@@ -73,8 +73,6 @@
    "source": [
     "!pip install pandas\n",
     "import pandas as pd\n",
-    "\n",
-    "# CSV dosyasını okuyarak veri kümenizi oluşturun\n",
     "dataset_path = 'ai4i2020.csv'\n",
     "data = pd.read_csv(dataset_path)\n",
     "df = data.copy()"
@@ -694,7 +692,7 @@
     }
    ],
    "source": [
-    "df[\"Type\"].value_counts().plot.barh().set_title(\"Cut Değişkeinin Sınıf Frekansı\");"
+    "df[\"Type\"].value_counts().plot.barh().set_title(\"Type Değişkeinin Sınıf Frekansı\");"
    ]
   },
   {
@@ -2313,22 +2311,17 @@
     "!pip install imbalanced-learn\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
-    "# Veri setini yükleyin (örneğin, \"data.csv\" dosyasından okuyalım)\n",
     "df_num = df.select_dtypes(include=[\"float64\",\"int64\",\"int32\"])\n",
     "\n",
-    "# \"Machine failure\" sütununu ayrıştırın ve diğer özellikleri \"X\" veri kümesine atayın\n",
     "X = df_num.drop(columns=['Machine failure','UDI','TWF','HDF','PWF','OSF','RNF'])\n",
     "y = df_num['Machine failure']\n",
     "\n",
-    "# SMOTE'u \"Machine failure\" sütunu için uygulayarak veri setini aşırı örnekleme yapın\n",
     "smote = SMOTE()\n",
     "X_resampled, y_resampled = smote.fit_resample(X, y)\n",
     "\n",
-    "# Aşırı örnekleme sonrası veri setini oluşturun\n",
     "df_resampled = pd.DataFrame(X_resampled, columns=X.columns)\n",
     "df_resampled['Machine failure'] = y_resampled\n",
     "\n",
-    "# Aşırı örnekleme sonrası veri setinin boyutlarını kontrol edin\n",
     "print(\"Eski veri seti boyutu:\", df_num.shape)\n",
     "print(\"Aşırı örnekleme sonrası veri seti boyutu:\", df_resampled.shape)\n",
     "\n"
@@ -2801,34 +2794,18 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "# from sklearn import preprocessing\n",
-    "# df[:] = preprocessing.scale(df)\n",
-    "# from sklearn.preprocessing import MinMaxScaler\n",
     "X = df.drop(columns=['Machine failure'],axis=1)\n",
     "y = df['Machine failure']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Initialize StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "\n",
-    "# Fit and transform the scaler on the training data\n",
     "X_train = scaler.fit_transform(X_train)\n",
-    "\n",
-    "# Transform the test data using the same scaler\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "\n",
-    "\n",
     "# scaler = MinMaxScaler()\n",
-    "# # Fit and transform the scaler on the training data\n",
     "# X_train = scaler.fit_transform(X_train)\n",
-    "# # Transform the test data using the same scaler\n",
     "# X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Ölçeklenmiş training veri setinin boyutunu kontrol edin\n",
     "print(\"Ölçeklenmiş training veri seti boyutu:\", X_train.shape, y_train.shape)\n",
-    "\n",
-    "# Ölçeklenmiş test veri setinin boyutunu kontrol edin\n",
     "print(\"Ölçeklenmiş test veri seti boyutu:\", X_test.shape, y_test.shape)"
    ]
   },
@@ -3124,29 +3101,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# from sklearn.metrics import classification_report\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import classification_report\n",
     "\n",
-    "# from sklearn.ensemble import RandomForestClassifier\n",
-    "# from sklearn.metrics import accuracy_score, confusion_matrix\n",
-    "# rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "# rf_model.fit(X_train, y_train)\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
     "\n",
-    "# # Modelin performansını test veri kümesi üzerinde değerlendirin\n",
-    "# y_pred = rf_model.predict(X_test)\n",
-    "# accuracy = accuracy_score(y_test, y_pred)\n",
-    "# conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "y_pred = rf_model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "# print(\"Random Forest Model Doğruluğu:\", accuracy)\n",
-    "# classification_rep = classification_report(y_test, y_pred)\n",
+    "print(\"Random Forest Model Doğruluğu:\", accuracy)\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
     "\n",
-    "# print(\"Classification Report:\\n\", classification_rep)\n",
-    "# sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues')\n",
-    "# plt.title(\"Confusion Matrix\")\n",
-    "# plt.xlabel(\"True Labels\")\n",
-    "# plt.ylabel(\"Predicted Labels\")\n",
-    "# plt.show()\n",
-    "# #print(conf_matrix)"
+    "print(\"Classification Report:\\n\", classification_rep)\n",
+    "sns.heatmap(conf_matrix, annot=True, fmt='d', cmap='Blues')\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "plt.xlabel(\"True Labels\")\n",
+    "plt.ylabel(\"Predicted Labels\")\n",
+    "plt.show()\n",
+    "#print(conf_matrix)"
    ]
   },
   {
@@ -3611,16 +3587,15 @@
     "from keras.optimizers import Adam\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
     "\n",
-    "# GRU modelini oluşturun ve eğitin\n",
+    "# GRU\n",
     "model = Sequential()\n",
-    "model.add(GRU(units=64, activation='relu', input_shape=(X_train.shape[1], 1)))  # GRU için giriş boyutunu düzenledik (timestep=1)\n",
+    "model.add(GRU(units=64, activation='relu', input_shape=(X_train.shape[1], 1)))\n",
     "model.add(Dense(units=32, activation='relu'))\n",
     "model.add(Dense(units=1, activation='sigmoid'))\n",
     "\n",
     "optimizer = Adam(learning_rate=0.001)\n",
     "model.compile(optimizer=optimizer, loss='binary_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "#GRU için giriş boyutunu düzenlemek için veri setini yeniden şekillendirin\n",
     "# X_train_reshaped = X_train.values.reshape(X_train.shape[0], X_train.shape[1], 1)\n",
     "# X_test_reshaped = X_test.values.reshape(X_test.shape[0], X_test.shape[1], 1)\n",
     "\n",
@@ -3840,21 +3815,15 @@
     "from flask_cors import CORS\n",
     "import joblib\n",
     "app = Flask(__name__)\n",
-    "CORS(app)  # Tüm kök alanlardan gelen isteklere izin verir\n",
-    "# Modeli yükle\n",
-    "model = joblib.load(\"model.pkl\")  # Modeli zip dosyasından çıkarın ve yükleyin\n",
-    "\n",
+    "CORS(app)  \n",
+    "model = joblib.load(\"model.pkl\")\n",
     "@app.route('/predict', methods=['POST'])\n",
     "def predict():\n",
     "    try:\n",
-    "        # Gelen veriyi alın\n",
     "        data = request.get_json()\n",
     "        final_data = scaler.transform(np.array([data]))\n",
     "        print(final_data)\n",
-    "        # Modeli kullanarak tahmin yapın\n",
     "        prediction = model.predict(final_data)\n",
-    "\n",
-    "        # Tahmini JSON formatında döndürün\n",
     "        return jsonify({\"prediction\": prediction.tolist()})\n",
     "    except Exception as e:\n",
     "        return jsonify({\"error\": str(e)})\n",
